# Logistic_Regressor_from_scratch

./: README.md  logistic_regressor.ipynb  pyproject.toml
lrenv/Scripts/: activate  activate.bat
